<resources>
    <string name="app_name">WorldCinema</string>
    <string name="world_cinema">WorldCinema</string>
    <string name="email">E-mail</string>
    <string name="email_example">you@example.com</string>
    <string name="password">Пароль</string>
    <string name="hint_password">Ваш пароль</string>
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="tile_label">Example tile</string>
    <string name="title_activity_presentation._main">presentation.MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="complication_label">Example complication</string>
</resources>