<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/world_cinema"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="10dp" />

        <Button
            android:id="@+id/ButtonSugnIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/blue"
            android:text="Войти"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>